Resolves: fdo#49897 add+use SwDoc::containsUpdatableFields

Change-Id: I03ab6367a40ddc5748a499c4e2c7f108a3ef8a08